test/successor_ml/should_not_compile/num-underscore-1.sml
val _ = #123_45 { 12_345 = 67 };
